# kontr-tests

./: CMakeLists.txt  Exec.h  Session.h  UnitTest.h
Generator/: Session.h  UnitTest.h
tests/: CMakeLists.txt  MasterTest.cpp  Session.cpp  Variable.cpp
